# nfl-projector

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  check_dc.py  pyproject.toml
nfl_projector_v1/: .gitignore  README.md  __main__.py  backtest.py  cli.py  config.py  game.py  qb_starters.yaml  season.py  situational.py  utils.py
nfl_projector_v1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nfl_projector_v1/data/: depth_charts.py  loaders.py  roster.py
nfl_projector_v1/ingest/: __init__.py  database.py  readers.py  schemas.py
nfl_projector_v1/projections/: base.py  points.py  qb.py  rb.py  team.py  wr_te.py
scripts/: build_database.py  fetch_external_data.py  fetch_kicking.py  incorporate_2021_2022.py  rename_csvs.py  update_receiving_with_rb.py
