[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl_projector_v1"
version = "0.1.0"
description = "Bottom-up NFL game prediction model. Projects player stat lines, aggregates to team production, derives game score."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "duckdb>=0.9",
    "pyyaml>=6.0",
    "scipy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nfl_projector_v1*"]
